start from _until here draft 1_

--- a/src/content/docs/en/guides/cms/builderio.mdx
+++ b/src/content/docs/en/guides/cms/builderio.mdx
@@ -246,15 +246,7 @@ By the end of this guide you'll have a website that
 
 
 ### Creating A Base Layout
-Create a layout for a single blog post. Here we are using the `BaseLayout` as we left it at the end of our getting started with Astro tutorial [xxx].
-
-The idea here is to have the content of the <Header> and <Footer> come from Astro files, while the blog post will go into the <slot>. You'll create a blog post via the Builder app in the next step. 
-
-:::note
-This is one workflow among many. It demonstrates how You could split up the development of a site - the writers can design posts using Builder's visual interface, while other teams can handle more perennial or technical stuff. 
-Feel free to experiment with other set ups and find one that suits your team's needs!
-:::
-
+Create the layout you'll be using to show a single blog post:
 
 ```astro title='/src/layouts/BaseLayout'
 ---
@@ -285,41 +277,66 @@ const { pageTitle } = Astro.props;
 </html>
 ```
 
-### Creating a Blogpost Model
+This `BaseLayout` is the same as you'd be left with at the end of our [getting started with Astro tutorial ](xxx).
 
-Follow [Builder's official tutorial](https://www.builder.io/blog/creating-blog) for creating a blog post model - it haas gifs!
+The idea here is to have the content of the <Header> and <Footer> come from Astro files, while the blog post will go into the <slot>. You'll create a blog post via the Builder app in the next step. 
 
-In short, to create a model for your blogpost go to the Builder app and click on the **Models** tab. Click on the <kbd>+ Create Model</kbd> button and create a model of the type `section`. A section model means that the content can sit between other elements of a page - like the header and footer that are part of our `<BaseLayout>`! 
+:::note
+This is one workflow among many. It demonstrates how You could split up the development of a site - the writers can design posts using Builder's visual interface, while other teams can handle more perennial content or technical stuff. 
 
-In that new model add some fields. This will be the data related to a blog post (without the written content). You can add whatever fields You like. For this tutorial we'll keep it simple:
+Experiment with other setups and find one that suits your team's needs!
+:::
+
+### Creating the data model for each blog post
+
+Follow [Builder's official tutorial](https://www.builder.io/blog/creating-blog) for creating a blog post model - it has gifs!
+
+In short, to create a model for your blogpost go to the Builder app and click on the **Models** tab. Click on the <kbd>+ Create Model</kbd> button and create a model of the type `section`. A section model means that the content can sit between other elements of a page - like the <Header> and <Footer> that are part of our `<BaseLayout>`! 
+
+In that new model add some fields. This will be the data *about* a blog post (as opposed to the content itself). For this tutorial add the following fields:
 
    - `title` - A text field
-   - `image` - A file field
    - `slug` - A text field
 
-### Creating content
+:::note
+You can add whatever fields You like. Other popular choices are fields that contain the author's name, the date of publication or the image to be used for the post.  
+:::
+
+### Creating a blog post
+// ### Creating New Content
+// ### Using Builder's Visual Editor
+
+Make an edit in Builder's editor and click `Publish`. Your content won't be live yet, but you'll learn how to fetch it in the next step. 
+
+What happened now is 
+If you've crreated a blog post with the title, and created a heading and some text in the visual editor...[screenshot]
+To understand our project, let's take a moment at what happened when you create a blog post on builder. 
+
+* A new post is represented by new content using the model `blogpost`. This content has data fields like `title`, `author` and `slug`. You'll be fetching this data through Builder's `content API` [xxx] and use it to display a list of all your pieces of content (in this guide the pieces are blogposts)
+* You used Builder's visual editor to drag-and-drop text, images and media to visually create a blog post. This data is HTML and CSS, different from the data fields associated with our model. You'll fetch this pre-rendered HTML through Builder's `QWIK API` [xxx] and embed it on a dynamic route representing a single piece of content (one blogpost)
+
+until here draft 1
+---
 
 To add new content, go to the content section by clicking in the **Content** tab. Click on *new* and choose the model for your blogpost. If You followed the steps under [integrating with Astro] and everything worked, you should see something like this: 
 
 [screenshot with empty blogpost]
 
-xxx
-NOTE TO SELF
-* explain how to structure the data of a blogpost? - what to put in a data field and what to put directly via Builder's drag and drop?
-*** might make more sense to work with components here?
-xxx
-
 The data fields you've just created are in the panel on the right under the *options* tab. Fill those in and then add some content to your post! To do that, click on the *+ Add Block* button and add whatever you want - maybe a text field with some text to start with. Here is where you can use the full power of Builder's drag and drop editor and design your blog post to your heart's contents!  
-
-xxx
-NOTE TO SELF
-* following storyblok tutorial this would all be pre-given content and less of a suggestion
-* mb suggest creating a second blog post so we can show the listing of posts later a little more clearly
-xxx
 
 Now that you have your content ready, return to your Astro project and start building your blog.
 
 ### Creating the component representing a blog post 
+### Displaying the Content of a Blogpost
+
+<FileTree title="Project Structure">
+    - src/pages/posts/**[slug].astro** - .env - astro.config.mjs - package.json
+</FileTree>
+
+
+On this page, you'll again fetch all the slugs of your content - you'll need them at build time to create all of your routes statically. 
+
+Then, for each slug, you'll fetch the HTML content of the blogpost using Builder's `QWIK API` [xxx]. This is the stuff you dragged-and-dropped in Builder's visual editor. 
 
 To connect your newly created blog model to your Astro project, create a new folder named `pages` in your `src` directory, a `posts` folder within that and add a file called `[...slug].astro` with the following content:
 
@@ -379,6 +396,10 @@ const { html: postHTML } = await fetch(
 ```
 
 This file uses Astro's [spread syntax](xxx) and generates a route for each blog post, with the slug and content fetched from Builder's ... API. The HTML used here is made of the blocks you put on the page in Builder's editor!    
+
+:::note
+The HTML is put into our `<BaseLayout>` matching our `builder-preview` page created in step 1 [xxx]. 
+:::
 
 xxx now you can go to /localhost/pages/foo and should be able to see your blog posts!
 
@@ -450,116 +471,6 @@ Once your site builds or your dev server runs the code, you should be able to se
 
 The link isn't working though, since we haven't created the appropiate route yet. 
 
-
-### Creating a New Blog Post
-// ### Creating New Content
-// ### Using Builder's Visual Editor
-
-Make an edit in Builder's editor and click `Publish`. Your content won't be live yet, but you'll learn how to fetch it in the next step. 
-
-What happened now is 
-If you've crreated a blog post with the title, and created a heading and some text in the visual editor...[screenshot]
-To understand our project, let's take a moment at what happened when you create a blog post on builder. 
-
-* A new post is represented by new content using the model `blogpost`. This content has data fields like `title`, `author` and `slug`. You'll be fetching this data through Builder's `content API` [xxx] and use it to display a list of all your pieces of content (in this guide the pieces are blogposts)
-* You used Builder's visual editor to drag-and-drop text, images and media to visually create a blog post. This data is HTML and CSS, different from the data fields associated with our model. You'll fetch this pre-rendered HTML through Builder's `QWIK API` [xxx] and embed it on a dynamic route representing a single piece of content (one blogpost)
-
-### Displaying a List of Blogposts
-
-
-### Displaying the Content of a Blogpost
-
-To display each blogpost you'll create a catch-all route [xxx] matching the route `/posts/${slug}` from the previous step [xxx].
-
-<FileTree title="Project Structure">
-    - src/pages/posts/**[slug].astro** - .env - astro.config.mjs - package.json
-</FileTree>
-
-
-On this page, you'll again fetch all the slugs of your content - you'll need them at build time to create all of your routes statically. 
-
-Then, for each slug, you'll fetch the HTML content of the blogpost using Builder's `QWIK API` [xxx]. This is the stuff you dragged-and-dropped in Builder's visual editor. 
-
-In this example this HTML is put into our `<BaseLayout>` - matching our `builder-preview` page created in step 1 [xxx]. 
-
-```astro title="pages/posts/[slug].astro"
----
-import BaseLayout from "../../layouts/BaseLayout.astro";
-
-const builderAPIpublicKey = import.meta.env.BUILDER_API_PUBLIC_KEY;
-const builderModel = import.meta.env.BUILDER_BLOGPOST_MODEL;
-
-// 💥 TO REVIEWER: This is a lot of repeated code since we're making the same API call as in Blog.astro. 
-// 2 ideas to avoid that:
-// 1. Still making two API calls but putting them in a separate file.  
-// 2. Some kind of pre-build Integrations magic. Let me know if this is possible. 
-
-const handleError = (err) => {
-    // The requested Builder content could not be found.
-    if (err.response.status === 404) {
-        return { data: null };
-    }
-    throw err;
-};
-
-export async function getStaticPaths() {
-    // We need to repeat this here, as `getStaticPaths` doesn't have access to variables in its parent's scope.
-    // Relevant docs: https://docs.astro.build/en/reference/api-reference/#getstaticpaths
-    const builderAPIpublicKey = import.meta.env.BUILDER_API_PUBLIC_KEY;
-    const builderModel = import.meta.env.BUILDER_BLOGPOST_MODEL;
-    // const baseURL = "https://astro-builder-restapi.netlify.app/";
-
-    const { results: posts } = await fetch(
-        `https://cdn.builder.io/api/v2/content/${builderModel}?${new URLSearchParams(
-            {
-                apiKey: builderAPIpublicKey,
-                fields: ["data.slug", "data.title"].join(","),
-                cachebust: "true",
-            }
-        ).toString()}`
-    )
-        .then((res) => res.json())
-        .catch(handleError);
-
-    return [
-        ...posts.map(({ data: { slug, title } }) => [
-            {
-                params: { slug },
-                props: { title },
-            },
-        ]),
-    ];
-}
-const { slug } = Astro.params;
-const { title } = Astro.props;
-
-// Builder's API requires this field but for this use case the url doesn't seem to matter - the API returns the same HTML
-const encodedUrl = encodeURIComponent("moot");
-
-const { html: postHTML } = await fetch(
-    `https://cdn.builder.io/api/v1/qwik/${builderModel}?${new URLSearchParams({
-        apiKey: builderAPIpublicKey,
-        url: encodedUrl,
-        "query.data.slug": slug,
-        cachebust: "true",
-    }).toString()}`
-)
-    .then((res) => res.json())
-    .catch(handleError);
----
-
-<BaseLayout pageTitle={title}>
-    <Fragment set:html={postHTML} />
-</BaseLayout>
-
-```
-
-To query your data, use the `useStoryblokApi` hook. This will initialize a new client instance using your integration configuration.
-
-To render your content, pass the `content` property of the Story to the `StoryblokComponent` as a `blok` prop. This component will render the Bloks that are defined inside the `content` property. In this case, it will render the `BlogPost` component.
-
-xxxx
-
 ### Publishing your site
 
 To deploy your website, visit our [deployment guides](/en/guides/deploy/) and follow the instructions for your preferred hosting provider.
@@ -601,3 +512,14 @@ Now, whenever you publish a new story, a new build will be triggered and your bl
 ## Community Resources
 
 - Read [Connecting Builder.io's Visual CMS to Astro](https://www.hamatoyogi.dev/blog/astro-log/connecting-builderio-to-astro) by Yoav Ganbar
+
+---
+
+## UNUSED copy
+To display each blogpost you'll create a catch-all route [xxx] matching the route `/posts/${slug}` from the previous step [xxx].
+
+NOTES
+* explain how to structure the data of a blogpost? - what to put in a data field and what to put directly via Builder's drag and drop?
+*** might make more sense to work with components here?
+* following storyblok tutorial this would all be pre-given content and less of a suggestion
+* mb suggest creating a second blog post so we can show the listing of posts later a little more clearly
