--- a/src/content/docs/en/recipes/md-reading-time.mdx
+++ b/src/content/docs/en/recipes/md-reading-time.mdx
@@ -1,5 +1,5 @@
 ---
-title: Add Markdown Reading Time
+title: Add Reading Time to Markdown
 description: Learn how to add a reading time every Markdown or MDX file.
 i18nReady: false
 type: recipe
