switch to package manager tabs

--- a/src/content/docs/en/recipes/md-reading-time.mdx
+++ b/src/content/docs/en/recipes/md-reading-time.mdx
@@ -5,6 +5,8 @@ i18nReady: false
 type: recipe
 ---
 
+import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
+
 Plugins can be used extend Markdown with new capabilities. In this recipe, you'll learn how to add a reading time property to your Markdown or MDX files.
 
 ## Prerequisites
@@ -19,9 +21,23 @@ You can use a [remark plugin](https://github.com/remarkjs/remark) to add a readi
 - [`reading-time`](https://www.npmjs.com/package/reading-time) to calculate minutes read
 - [`mdast-util-to-string`](https://www.npmjs.com/package/mdast-util-to-string) to extract all text from your markdown
 
-```shell
+<PackageManagerTabs>
+  <Fragment slot="npm">
+  ```shell
 npm install reading-time mdast-util-to-string
-```
+  ```
+  </Fragment>
+  <Fragment slot="pnpm">
+  ```shell
+pnpm install reading-time mdast-util-to-string
+  ```
+  </Fragment>
+  <Fragment slot="yarn">
+  ```shell
+yarn add reading-time mdast-util-to-string
+  ```
+  </Fragment>
+</PackageManagerTabs>
 
 We can apply these packages to a remark plugin like so:
 
