--- a/src/content/docs/en/recipes/reading-time.mdx
+++ b/src/content/docs/en/recipes/reading-time.mdx
@@ -66,7 +66,7 @@ import { remarkReadingTime } from './remark-reading-time.mjs';
 
 export default defineConfig({
   markdown: {
-    remarkPlugins: [remarkReadingTime]
+    remarkPlugins: [remarkReadingTime],
   },
 });
 ```
