title and grammar

--- a/src/content/docs/en/recipes/reading-time.mdx
+++ b/src/content/docs/en/recipes/reading-time.mdx
@@ -1,6 +1,6 @@
 ---
-title: Add Reading Time to Markdown
-description: Learn how to add a reading time every Markdown or MDX file.
+title: Add Reading Time
+description: Learn how to add a reading time to every Markdown or MDX file.
 i18nReady: false
 type: recipe
 ---
