change prereq to remark only

--- a/src/content/docs/en/recipes/reading-time.mdx
+++ b/src/content/docs/en/recipes/reading-time.mdx
@@ -11,7 +11,7 @@ Plugins can be used extend Markdown with new capabilities. In this recipe, you'l
 
 ## Prerequisites
 
-- The [remark or rehype plugin](/en/guides/markdown-content#markdown-plugins).
+- The [remark plugin](/en/guides/markdown-content#markdown-plugins).
 
 ## Recipe
 
