--- a/src/content/docs/es/core-concepts/endpoints.mdx
+++ b/src/content/docs/es/core-concepts/endpoints.mdx
@@ -172,7 +172,7 @@ export const all: APIRoute = ({ request }) => {
 };
 ```
 
-<RecipeLinks slugs={["es/recipes/captcha/", "es/recipes/build-forms-api/" ]}/>
+<RecipeLinks slugs={["es/recipes/captcha", "es/recipes/build-forms-api" ]}/>
 
 ### `request` 
 En modo SSR, la propiedad `request` retorna un objeto [`Request`](https://developer.mozilla.org/es/docs/Web/API/Request) totalmente utilizable que hace referencia a la solicitud actual. Esto permite aceptar datos y verificar encabezados:
